Get astronaut by id
